# Pixl

./: .gitignore  README.md  example_config.yaml  justfile  pyproject.toml
src/pixl/: __init__.py
src/pixl/core/: settings.py
